Upgraded to JDK 20, added white noise, upgraded gradle, refactoring